--- a/_posts/2021-04-03-seventh.md
+++ b/_posts/2021-04-03-seventh.md
@@ -1,7 +1,7 @@
 ---
 title: "일곱번째"
 layout: categories
-permalink: /categories/iOS/
+permalink: /categories/iOS/seven/
 author_profile: true
 ---
 7번째
