--- a/_posts/2021-04-03-seventh.md
+++ b/_posts/2021-04-03-seventh.md
@@ -1,7 +1,8 @@
 ---
 title: "일곱번째"
-layout: categories
-permalink: /categories/iOS/seven/
+layout: single
 author_profile: true
+categories: ['programming','python']
+
 ---
 7번째
