--- a/_posts/2021-04-03-sixth.md
+++ b/_posts/2021-04-03-sixth.md
@@ -1,7 +1,8 @@
 ---
-title: "Posts by Category"
-layout: categories
-permalink: /categories/Android/
+title: "6번째"
+layout: single
 author_profile: true
+categories: ['programming','java']
+
 ---
 여섯번째입니다. 6
