--- a/_posts/2021-04-04-fourth.md
+++ b/_posts/2021-04-04-fourth.md
@@ -1,7 +1,8 @@
 ---
 title: "네 번째"
-layout: categories
-permalink: /categories/iOS/
+layout: single
 author_profile: true
+categories: ['programming','javascript']
+
 ---
 안녕하세요. 네 번째 게시글입니다. 4s
