--- a/_posts/2021-04-04-second.md
+++ b/_posts/2021-04-04-second.md
@@ -1,7 +1,8 @@
 ---
 title: "두번째"
-layout: categories
-permalink: /categories/iOS/
+layout: single
 author_profile: true
+categories: ['programming','java']
+
 ---
 안녕하세요 두 번째 포스팅입나다.
