--- a/_posts/2021-04-03-fifth.md
+++ b/_posts/2021-04-03-fifth.md
@@ -1,7 +1,7 @@
 ---
 title: "다섯번째"
-layout: categories
-permalink: /categories/Android/
+layout: single
 author_profile: true
+categories: ['programming','python']
 ---
 안녕하세요. 5번째 게시글입니다. 5
