--- a/_posts/2021-04-04-third.md
+++ b/_posts/2021-04-04-third.md
@@ -1,7 +1,7 @@
 ---
 title: "세 번째"
-layout: categories
-permalink: /categories/Server/
+layout: single
 author_profile: true
+categories: ['programming','javascript']
 ---
 세번째입니다.
