--- a/_posts/2021-04-03-fifth.md
+++ b/_posts/2021-04-03-fifth.md
@@ -2,6 +2,7 @@
 title: "다섯번째"
 layout: single
 author_profile: true
-categories: ['programming','python']
+categories: 
+    - python
 ---
 안녕하세요. 5번째 게시글입니다. 5
