--- a/_posts/2021-04-03-first.md
+++ b/_posts/2021-04-03-first.md
@@ -2,7 +2,8 @@
 layout: single
 title: "첫 포스팅"
 author_profile: true
-categories: ['programming','python']
+categories:
+    - python
 ---
 
 # 처음 블로그 게시물
