--- a/_posts/2021-04-04-fourth.md
+++ b/_posts/2021-04-04-fourth.md
@@ -2,7 +2,8 @@
 title: "네 번째"
 layout: single
 author_profile: true
-categories: ['programming','javascript']
+categories:
+    - javascript
 
 ---
 안녕하세요. 네 번째 게시글입니다. 4s
