--- a/_posts/2021-04-04-second.md
+++ b/_posts/2021-04-04-second.md
@@ -2,7 +2,8 @@
 title: "두번째"
 layout: single
 author_profile: true
-categories: ['programming','java']
+categories:
+    - java
 
 ---
 안녕하세요 두 번째 포스팅입나다.
