--- a/_posts/2021-04-04-third.md
+++ b/_posts/2021-04-04-third.md
@@ -2,6 +2,7 @@
 title: "세 번째"
 layout: single
 author_profile: true
-categories: ['programming','javascript']
+categories:
+    - javascript
 ---
 세번째입니다.
