--- a/_posts/2021-04-07-exam.md
+++ b/_posts/2021-04-07-exam.md
@@ -3,7 +3,8 @@ layout: single
 titile: "Hello"
 subtitle: "안녕하세요"
 date: 2021-04-07 07:32:00 +0900
-categories: ['programming','python']
+categories:
+    - python
 ---
 
 내용입니다.
