--- a/_posts/2021-06-04-tfrecord_1.md
+++ b/_posts/2021-06-04-tfrecord_1.md
@@ -4,7 +4,7 @@ title: "TFRecord란?"
 author_profile: true
 excerpt: "serialization, protobuf"
 categories:
-    - MLPipeline
+    - MLOps
 ---
 
 TFRecord 이진 레코드 시퀀스를 저장하기 위한 형식이다.
