--- a/_posts/2021-07-07-mlops_8.md
+++ b/_posts/2021-07-07-mlops_8.md
@@ -2,7 +2,7 @@
 layout: single
 title: "MLflow에 대해서 알아보자 - Model Registry"
 author_profile: true
-excerpt: ""
+excerpt: "Model, Registered Model, Model Version, Model Stage"
 categories:
     - MLOps
 ---
