--- a/_posts/2021-12-12-cnn_5.md
+++ b/_posts/2021-12-12-cnn_5.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Gradisen Descent 이해하기"
+title: "Gradient Descent 이해하기"
 author_profile: true
 excerpt: "learning rate, initial point, stochastic gradisen descent"
 categories:
