--- a/_posts/2021-12-15-cnn_6.md
+++ b/_posts/2021-12-15-cnn_6.md
@@ -1,8 +1,8 @@
 ---
 layout: single
-title: "Gradient Descent 이해하기"
+title: "Generalization 이해하기"
 author_profile: true
-excerpt: "learning rate, initial point, stochastic gradisen descent"
+excerpt: "L1, L2"
 categories:
     - CNN
 ---
