--- a/_posts/2021-12-15-cnn_6.md
+++ b/_posts/2021-12-15-cnn_6.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Generalization 이해하기"
+title: "Regularlization 이해하기"
 author_profile: true
 excerpt: "L1, L2"
 categories:
