--- a/_posts/2021-12-15-cnn_6.md
+++ b/_posts/2021-12-15-cnn_6.md
@@ -74,6 +74,18 @@ Bagging(bootstrao aggregating)은 여러 모델을 결합해서 일반화 오차
 
 위 그림은 조금 더 bagging 방식의 효용성을 이해하는데 도움이 된다. 첫번째 샘플에서는 9가 없고 두번째 샘플 에서는 6이 없다. 그래서 네트워크에서 8을 구분 한다고 했을 때, 첫번째 샘플에서는 위쪽에 동그라미가 있는지 없는지를 볼 것이고, 두번째 샘플에서는 아래쪽에 동그라미가 있는지 없는지 볼 것이다. 개별적으로는 정확하다고 볼 수는 없는 방법이지만, 두 모델의 출력을 평균하면 안정된 결과를 얻을 수 있을 것이다. 결국은 동그라미가 위 아래 모두가 있을 때에 최대 확신도(maximal confidence)를 갖게 될 것이다.
 
+## 8.Dropout
+
+Dropout은 위에서 설명한 배깅 방식과 거의 비슷한 효과를 내는 방식이다. 배깅방식은 동일한 데이터 세트를 이용하여 다양한 해를 도출하는 모델을 만들고 그것들의 투표를 통해서 결과를 산출하여 일반화된 성능을 얻는다. 드롭아웃은 동일한 효과를 가져다준다. 네트워크의 마스킹을 통해서 가중치를 0으로 설정함으로써 인위적으로 연결을 끊는다. 이런 과정을 통해서 마치 배깅처럼 여러 개의 네트워크를 학습하는 효과를 얻는 셈이 되는 것이다. 
+
+아래 그림을 보면 그 형태가 잘 나와있다.
+
+![dropout](/assets/images/dropout.jpg)
+
+입력 단위와 출력단위가 무작위로 설정되는 것을 확인할 수가 있다. 다만, 입력과 출력이 전혀 연결되지 않는 경우도 보이는데, 이 경우는 네트워크의 크기가 크지 않기 때문에 발생하는 현상이다. 네트워크가 충분히 크다면 이러한 경우는 확률적으로 발생하기 힘들다고 보면 된다. 
+
+그러면 배깅방식과 드롭아웃의 차이점은 무엇일까? 그것은 배깅방식은 모델을 따로따로 학습을 시키기 때문에 매개변수들에 대해서 서로 독립적이지만, 드롭아웃의 경우는 하나의 네트워크를 학습할 때 노드만 선택적으로 죽여서 학습시키는 방식이기 때문에 **매개변수를 서로 공유**하게 된다. 한번 학습을 진행할 때 부분적인 네트워크만 학습하지만 매개변수를 공유하기 때문에 다른 부분 네트워크망도 적절한 매개변수를 가지게 된다. 또 **배깅방식은 모델 수가 늘어날 수록 리소스에 대한 부담**이 굉장히 커지게 되지만 **드롭아웃은 계산비용은 조금 늘어나지만** 하나의 모델을 만드는 것이므로 훨씬더 비용 **효율적인 방식**이라고 할 수 있다.
+
 ### Reference
 
 - [http://www.chioka.in/differences-between-l1-and-l2-as-loss-function-and-regularization/](http://www.chioka.in/differences-between-l1-and-l2-as-loss-function-and-regularization/)
